[metadata]
url =https://github.com/SteffenBrinckmann/marda
author = Steffen Brinckmann
author_email = sbrinckm@gmail.com
description = Something
long_description = file:README_PYPI.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.7
# https://setuptools.pypa.io/en/latest/userguide/dependency_management.html
install_requires =
    numpy
    matplotlib
packages = find_namespace:
include_package_data = True

[options.packages.find]
include = pasta_eln*

[options.extras_require]
# this matches the name used by -core and what is expected by some CI setups
